--- a/styles/section.css
+++ b/styles/section.css
@@ -3,11 +3,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-
-.main-wrap {
-  padding: 1rem;
-}
-
 .sec-one-icons,
 .gift-icon {
   display: flex;
@@ -284,10 +279,6 @@ button:hover {
   .version{
     font-size: 0.75rem;
   }
-  button{
-    height: 8vh;
-  }
- 
   .bottom-icon,
   .gift{
     margin-right: -1rem;
@@ -309,6 +300,7 @@ button:hover {
   }
   .editor{
     display: flex;
+    gap: 2rem;
   }
 }
 @media (min-width: 992px){
@@ -384,6 +376,9 @@ button:hover {
     width: 50vw;
     height: 60vh;
   
+  }
+  .links-logo{
+    width: 15vw;
   }
  
   
